--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
+<app-header></app-header>
+
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-header></app-header>
+      <app-recipes></app-recipes>
       <app-shopping-list></app-shopping-list>
-      <app-shopping-edit-list></app-shopping-edit-list>
-      <app-recipe-list></app-recipe-list>
-      <app-recipe-item></app-recipe-item>
-      <app-recipe-detail></app-recipe-detail>
     </div>
   </div>
 </div>
