--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,22 @@
-<h1>Mon Header</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="#" class="navbar-brand">COOKAPP!</a>
+    </div>
+    <div class="navbar-default">
+        <ul class="nav navbar-nav">
+            <li><a href="#">Recettes</a></li>
+            <li><a href="#">Liste de courses</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" role="button">Menu <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Sauvgarder</a></li>
+                    <li><a href="#">importer des données</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+  </div>
+</nav>
