--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,3 +1,7 @@
-<h2>
-    Shopping List
-</h2>
+<div class="row">
+    <div class="col-xs-10">
+        <app-shopping-edit-list></app-shopping-edit-list>
+        <hr>
+        <p>La liste</p>
+    </div>
+</div>
